[metadata]
name = cheetah_lint
version = 1.1.0
description = Linting tools for the Cheetah templating language.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/cheetah_lint
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    aspy.refactor_imports>=0.2.1
    cached-property
    flake8>=3
    refactorlib[cheetah]>=0.14.0,<=0.14.999
    yelp-cheetah>=0.18.0,<=0.18.999
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    cheetah-reorder-imports = cheetah_lint.reorder_imports:main
    cheetah-flake = cheetah_lint.flake:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
