[metadata]
name = cheetah_lint
version = 1.3.1
description = Linting tools for the Cheetah templating language.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/cheetah_lint
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    cached-property
    classify-imports
    flake8>=6
    refactorlib[cheetah]>=0.15.0,<=0.15.999
    yelp-cheetah>=0.19.0,<=0.19.999
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    cheetah-reorder-imports = cheetah_lint.reorder_imports:main
    cheetah-flake = cheetah_lint.flake:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
